--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up GraalVM
-      uses: actions/setup-java@v2
+      uses: graalvm/setup-graalvm@v1
       with:
-        distribution: 'graalvm'
-        graalvm-version: '21.3.0'  # Adjust the version as needed
+        version: '21.3.0'  # Adjust the version as needed
         java-version: '11'  # Ensure this matches your project requirements
 
     - name: Set up environment
