--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,17 +19,16 @@ jobs:
     - name: Set up GraalVM
       uses: graalvm/setup-graalvm@v1
       with:
-        version: '21.3.0'  # Adjust the version as needed
-        java-version: '11'  # Ensure this matches your project requirements
+        java-version: '21'      # See 'Options' section below for all supported versions
+        distribution: 'graalvm' # See 'Options' section below for all available distributions
+        github-token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Set up environment
+    - name: Installation check
       run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential zlib1g-dev
-
-    - name: Set up GraalVM Native Image
-      run: |
-        gu install native-image
+          echo "GRAALVM_HOME: $GRAALVM_HOME"
+          echo "JAVA_HOME: $JAVA_HOME"
+          java --version
+          native-image --version
 
     - name: Build Quarkus Application
       run: ./mvnw clean package -Pnative
